--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es-CL"
   <head>
-    <title>LasPiedritas</title>
+    <title>Las Piedritas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -11,7 +11,12 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-    <h1>prueba</h1>
+      <div class="top-navigation">
+        <a class="active" href="home">Inicio</a>
+        <a href="#test">Prueba</a>
+      </div>
+      <h1>Las Piedritas</h1>
+      <h3>Prueba pública de la página web</h3>
     </header>
 
     <main id="content" class="main-content" role="main">
