--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
 
     <header class="page-header" role="banner">
       <div class="top-navigation">
-        <a class="active" href="home">Inicio</a>
-        <a href="#test">Prueba</a>
+        <a class="active" href="">Inicio</a>
+        <a href="404">prueba_Prueba_err_404</a>
       </div>
       <h1>Las Piedritas</h1>
       <h3>Prueba pública de la página web</h3>
